--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-uptown",
   "version": "1.0.0",
-  "description": "High-Performance React state-management framework",
+  "description": "High-Performance React state management",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
